# audacia-llm-evaluation

./: .gitignore  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml  pytest.ini
docs/: developer_guidelines.md
docs/evaluatior_descriptions/: bias.md  sentiment.md  toxicity.md
docs/evaluator_descriptions/: bias.md  format.md  rag.md  sentiment.md  similarity.md  toxicity.md
llm_eval/: custom_evaluator_tools.py  format_evaluator.py  model_tools.py  models.py  utils.py
llm_eval/azure_ai_evaluation/: azure_ai_similarity_base_evaluator.py  azure_ai_similarity_evaluators.py  bias_evaluator.py  format_evaluator.py  sentiment_evaluator.py  toxicity_evaluator.py
llm_eval/base_evaluators/: azure_ai_similarity_base_evaluator.py  custom_evaluators.py  format_base_evaluator.py  ragas_base_evaluator.py  transformer_base_evaluator.py
llm_eval/base_evaluators/azure_ai_evaluation/: azure_ai_similarity_base_evaluator.py
llm_eval/base_evaluators/ragas_evaluators/: ragas_rag_generation_evaluators.py  ragas_rag_retrieval_evaluators.py  ragas_similarity_evaluators.py
llm_eval/evaluators/: bias.py  format.py  rag.py  sentiment.py  similarity.py  toxicity.py
llm_eval/ragas/: ragas_similarity_evaluators.py
llm_eval/ragas_evaluators/: ragas_base_evaluator.py  ragas_rag_evaluators.py  ragas_rag_generation_evaluators.py  ragas_rag_retrieval_evaluators.py  ragas_similarity_evaluators.py
llm_eval/red_teaming/: promptfoo_bidwriter_config.yaml  promptfoo_default_config.yaml  promptfoo_evaluate.py  promptfoo_generate.py  promptfoo_utils.py
llm_eval/tools/: utils.py
llm_eval/transformer_evaluators/: transformer_base_evaluator.py  transformer_evaluators.py
tests/: test_format_evaluator.py  test_models.py  test_utils.py  utils.py
tests/azure_ai_evaluation/: test_azure_ai_similarity_evaluators.py  test_bias_analysis.py  test_sentiment_analysis.py  test_toxicity_analysis.py
tests/evaluators/: test_bias.py  test_format.py  test_rag.py  test_sentiment.py  test_similarity.py  test_toxicity.py
tests/ragas/: ragas_rag_generation_evaluators.py  test_ragas_rag_evaluators.py  test_ragas_rag_generation_evaluators.py  test_ragas_rag_retrieval_evaluators.py  test_ragas_similarity_evaluators.py  test_ragas_similarity_scoring.py
tests/red_teaming/: debug_promptfoo_evaluate.py  debug_promptfoo_generate.py  test_promptfoo_generate.py  test_promptfoo_utils.py
tests/test_ragas/: test_ragas_rag_generation_evaluators.py  test_ragas_rag_retrieval_evaluators.py  test_ragas_similarity_evaluators.py
tests/tools/: test_model_tools.py
tests/transformer_evaluation/: test_bias_analysis.py  test_sentiment_analysis.py  test_toxicity_analysis.py
