[project]
name = "audacia-llm-evaluation"
version = "0.0.2"
description = "A framework to evaluate LLMs in AI systems"
authors = [
    { name = "Chris Bentley", email = "chris.bentley@audacia.co.uk" },
    { name = "Alan Kerby", email = "alan.kerby@audacia.co.uk" },
    { name = "Liam Ward", email = "liam.ward@audacia.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub",         
  "ragas",                   
  "langchain-openai",        
  "azure-ai-evaluation",    
  "pytest",                  
  "transformers",           
  "python-dotenv",          
  "torch",                  
  "promptflow"
]             
license = "MIT"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_eval*"]

[tool.pytest.ini_options]
addopts = "-s --log-cli-level=INFO"
log_cli = true
log_cli_level = "INFO"

